dcc_scripts/spec/out/aligned_svm_ncv/slurm_29964767.err
  File "/hpc/home/etb28/coganlab/etb28/GlobalLocal/dcc_scripts/spec/make_wavelets_dcc.py", line 55
    output_names_and_events_dict = ['ErrorTrials'] = ["Accuracy/0.0"] 
                                    ^^^^^^^^^^^^^
SyntaxError: cannot assign to literal
